--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "18.15.10",
     "@types/react": "18.0.29",
     "@types/react-dom": "18.0.11",
+    "antd": "^5.4.0",
     "axios": "^1.3.4",
     "bcrypt": "^5.1.0",
     "date-fns": "^2.29.3",
